commit bilingual contents

--- a/docs/visual-basic/misc/bc30610.md
+++ b/docs/visual-basic/misc/bc30610.md
@@ -1,37 +1,31 @@
 ---
-title: 'クラス &#39;&lt;classname&gt;&#39; いずれかとして宣言されなければなりません &#39;です。MustInherit &#39;または、次の継承 &#39; のオーバーライドMustOverride &#39;メンバー: &lt;membername (s)&gt;'
+title: 'クラス&#39; &lt;classname&gt; &#39;いずれかとして宣言されなければなりません&#39;MustInherit&#39; 、次の継承をオーバーライドまたは&#39;MustOverride&#39;メンバー: &lt;membername (s)&gt;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30610
 - vbc30610
 helpviewer_keywords:
 - BC30610
 ms.assetid: 7fba7a3b-c918-44ba-ae85-20312615c1ce
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 224a5e0769211888cb0a29cb3352dd6c482fa825
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: b807a122f4e79fee97333b2a4879f7ea1961d62b
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33614339"
 ---
-# <a name="class-39ltclassnamegt39-must-either-be-declared-39mustinherit39-or-override-the-following-inherited-39mustoverride39-members-ltmembernamesgt"></a><span data-ttu-id="1795a-102">クラス &#39;&lt;classname&gt;&#39; いずれかとして宣言されなければなりません &#39;です。MustInherit &#39;または、次の継承 &#39; のオーバーライドMustOverride &#39;メンバー: &lt;membername (s)&gt;</span><span class="sxs-lookup"><span data-stu-id="1795a-102">Class &#39;&lt;classname&gt;&#39; must either be declared &#39;MustInherit&#39; or override the following inherited &#39;MustOverride&#39; member(s): &lt;membername(s)&gt;</span></span>
-<span data-ttu-id="1795a-103">`MustOverride` メンバーを含む基底クラスから派生したクラスでは、このようなメンバーをオーバーライドするか、または `MustInherit` 修飾子を使用する必要があります。</span><span class="sxs-lookup"><span data-stu-id="1795a-103">Classes derived from base classes that contain `MustOverride` members must either override such members or use the `MustInherit` modifier.</span></span>  
+# <a name="class-39ltclassnamegt39-must-either-be-declared-39mustinherit39-or-override-the-following-inherited-39mustoverride39-members-ltmembernamesgt"></a><span data-ttu-id="94d81-102">クラス&#39; &lt;classname&gt; &#39;いずれかとして宣言されなければなりません&#39;MustInherit&#39; 、次の継承をオーバーライドまたは&#39;MustOverride&#39;メンバー: &lt;membername (s)&gt;</span><span class="sxs-lookup"><span data-stu-id="94d81-102">Class &#39;&lt;classname&gt;&#39; must either be declared &#39;MustInherit&#39; or override the following inherited &#39;MustOverride&#39; member(s): &lt;membername(s)&gt;</span></span>
+<span data-ttu-id="94d81-103">`MustOverride` メンバーを含む基底クラスから派生したクラスでは、このようなメンバーをオーバーライドするか、または `MustInherit` 修飾子を使用する必要があります。</span><span class="sxs-lookup"><span data-stu-id="94d81-103">Classes derived from base classes that contain `MustOverride` members must either override such members or use the `MustInherit` modifier.</span></span>  
   
- <span data-ttu-id="1795a-104">**エラー ID:** BC30610</span><span class="sxs-lookup"><span data-stu-id="1795a-104">**Error ID:** BC30610</span></span>  
+ <span data-ttu-id="94d81-104">**エラー ID:** BC30610</span><span class="sxs-lookup"><span data-stu-id="94d81-104">**Error ID:** BC30610</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1795a-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="1795a-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="94d81-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="94d81-105">To correct this error</span></span>  
   
--   <span data-ttu-id="1795a-106">クラス定義に `MustInherit` 修飾子を追加します。</span><span class="sxs-lookup"><span data-stu-id="1795a-106">Add the `MustInherit` modifier to the class definition.</span></span>  
+-   <span data-ttu-id="94d81-106">クラス定義に `MustInherit` 修飾子を追加します。</span><span class="sxs-lookup"><span data-stu-id="94d81-106">Add the `MustInherit` modifier to the class definition.</span></span>  
   
--   <span data-ttu-id="1795a-107">`Overrides` キーワードを使用して、オーバーライドを宣言します。</span><span class="sxs-lookup"><span data-stu-id="1795a-107">Declare an override using the `Overrides` keyword.</span></span>  
+-   <span data-ttu-id="94d81-107">`Overrides` キーワードを使用して、オーバーライドを宣言します。</span><span class="sxs-lookup"><span data-stu-id="94d81-107">Declare an override using the `Overrides` keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1795a-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="1795a-108">See Also</span></span>  
- [<span data-ttu-id="1795a-109">Overrides</span><span class="sxs-lookup"><span data-stu-id="1795a-109">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)  
- [<span data-ttu-id="1795a-110">MustInherit</span><span class="sxs-lookup"><span data-stu-id="1795a-110">MustInherit</span></span>](../../visual-basic/language-reference/modifiers/mustinherit.md)  
- [<span data-ttu-id="1795a-111">継承の基礎 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="1795a-111">Inheritance basics (Visual Basic)</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+## <a name="see-also"></a><span data-ttu-id="94d81-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="94d81-108">See Also</span></span>  
+ [<span data-ttu-id="94d81-109">Overrides</span><span class="sxs-lookup"><span data-stu-id="94d81-109">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)  
+ [<span data-ttu-id="94d81-110">MustInherit</span><span class="sxs-lookup"><span data-stu-id="94d81-110">MustInherit</span></span>](../../visual-basic/language-reference/modifiers/mustinherit.md)  
+ [<span data-ttu-id="94d81-111">継承の基礎 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="94d81-111">Inheritance basics (Visual Basic)</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
