--- a/docs/visual-basic/misc/bc30631.md
+++ b/docs/visual-basic/misc/bc30631.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613377"
 ---
 # <a name="39get39-statement-must-end-with-a-matching-39end-get39"></a><span data-ttu-id="20d3d-102">&#39;取得&#39;、対応するステートメントが終了する必要があります&#39;End Get&#39;</span><span class="sxs-lookup"><span data-stu-id="20d3d-102">&#39;Get&#39; statement must end with a matching &#39;End Get&#39;</span></span>
 <span data-ttu-id="20d3d-103">`Get` プロパティ プロシージャは、必ず `End Get` ステートメントで終了する必要があります。</span><span class="sxs-lookup"><span data-stu-id="20d3d-103">`Get` property procedures must end with an `End Get` statement.</span></span>  
