--- a/docs/visual-basic/misc/bc30637.md
+++ b/docs/visual-basic/misc/bc30637.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33616553"
 ---
 # <a name="assembly-or-module-attribute-statements-must-precede-any-declarations-in-a-file"></a><span data-ttu-id="925e7-102">Assembly または Module 属性ステートメントは、ファイル内では宣言の前に記述しなければなりません</span><span class="sxs-lookup"><span data-stu-id="925e7-102">Assembly or Module attribute statements must precede any declarations in a file</span></span>
 <span data-ttu-id="925e7-103">グローバル属性は、ソース ファイルの先頭で `Option` ステートメントと `Imports` ステートメントよりも後、かつその他のステートメントよりも前に宣言する必要があります。</span><span class="sxs-lookup"><span data-stu-id="925e7-103">Global attributes must be declared at the top of a source file, after `Option` and `Imports` statements, but before any other statements.</span></span>  
