--- a/docs/visual-basic/misc/bc30747.md
+++ b/docs/visual-basic/misc/bc30747.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33615409"
 ---
 # <a name="internal-compiler-error"></a><span data-ttu-id="742fd-102">内部コンパイル エラー</span><span class="sxs-lookup"><span data-stu-id="742fd-102">Internal compiler error</span></span>
 <span data-ttu-id="742fd-103">式の評価中に内部エラーが発生しました。</span><span class="sxs-lookup"><span data-stu-id="742fd-103">An internal error occurred during expression evaluation.</span></span>  
