--- a/docs/visual-basic/misc/bc30984.md
+++ b/docs/visual-basic/misc/bc30984.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33618954"
 ---
 # <a name="3939-expected-object-initializer"></a><span data-ttu-id="acc01-102">&#39;=&#39; (オブジェクト初期化子) が必要です</span><span class="sxs-lookup"><span data-stu-id="acc01-102">&#39;=&#39; expected (object initializer)</span></span>
 <span data-ttu-id="acc01-103">オブジェクト初期化子の宣言でフィールドまたはプロパティの初期値を確立するには、等号を使用する必要があります。</span><span class="sxs-lookup"><span data-stu-id="acc01-103">To establish the initial value for a field or property in an object initializer declaration, you must use an equal sign.</span></span> <span data-ttu-id="acc01-104">たとえば、次の宣言では、 `Name` の `client`プロパティの初期値として "Microsoft" を割り当てています。</span><span class="sxs-lookup"><span data-stu-id="acc01-104">For example, the following declaration assigns "Microsoft" as the initial value for the `Name` property of `client`.</span></span>  
