--- a/docs/visual-basic/misc/bc31182.md
+++ b/docs/visual-basic/misc/bc31182.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33623907"
 ---
 # <a name="attribute-value-is-not-valid-expecting-39value139-or-39value239"></a><span data-ttu-id="f19c5-102">属性の値が無効です。指定してください&#39;value1&#39;または&#39;value2&#39;</span><span class="sxs-lookup"><span data-stu-id="f19c5-102">Attribute value is not valid; expecting &#39;value1&#39; or &#39;value2&#39;</span></span>
 <span data-ttu-id="f19c5-103">XML ドキュメント リテラルに、無効な属性の値が指定されています。</span><span class="sxs-lookup"><span data-stu-id="f19c5-103">An invalid value for an attribute in an XML document literal has been specified.</span></span> <span data-ttu-id="f19c5-104">XML ドキュメント リテラルの有効な属性値は、XML 1.0 仕様に基づきます。</span><span class="sxs-lookup"><span data-stu-id="f19c5-104">Valid attribute values for an XML document literal are based on the XML 1.0 specification.</span></span>  
