--- a/docs/visual-basic/misc/bc31195.md
+++ b/docs/visual-basic/misc/bc31195.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33624213"
 ---
 # <a name="operator-39operator39-is-not-defined-for-types-39type139-and-39type239"></a><span data-ttu-id="a3821-102">演算子&#39;演算子&#39;型に対して定義されていない&#39;type1&#39;と&#39;type2&#39;</span><span class="sxs-lookup"><span data-stu-id="a3821-102">Operator &#39;operator&#39; is not defined for types &#39;type1&#39; and &#39;type2&#39;</span></span>
 <span data-ttu-id="a3821-103">型 'type1' および 'type2' に対して演算子 'operator' が定義されていません。</span><span class="sxs-lookup"><span data-stu-id="a3821-103">Operator 'operator' is not defined for types 'type1' and 'type2'.</span></span> <span data-ttu-id="a3821-104">最初の要素の文字列値を取得する、'Value' プロパティを使用することができます '\<parentElement >' です。</span><span class="sxs-lookup"><span data-stu-id="a3821-104">You can use the 'Value' property to get the string value of the first element of '\<parentElement>'.</span></span>  
