--- a/docs/visual-basic/misc/bc33100.md
+++ b/docs/visual-basic/misc/bc33100.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33631051"
 ---
 # <a name="nullable-modifier-cannot-be-specified-on-both-a-variable-and-its-type"></a><span data-ttu-id="b5bb7-102">変数とその型の両方で、null 許容修飾子を指定することはできません</span><span class="sxs-lookup"><span data-stu-id="b5bb7-102">Nullable modifier cannot be specified on both a variable and its type</span></span>
 <span data-ttu-id="b5bb7-103">null 許容型修飾子 (?) は、宣言された変数と、その宣言された型の両方に含まれています。</span><span class="sxs-lookup"><span data-stu-id="b5bb7-103">The nullable type modifier (?) has been included for both a declared variable and its declared type.</span></span>  
