--- a/docs/visual-basic/misc/bc30092.md
+++ b/docs/visual-basic/misc/bc30092.md
@@ -1,38 +1,32 @@
 ---
-title: '&#39;です。次へ &#39;一致する &#39; の前が必要&#39;です。'
+title: '&#39;[次へ]&#39;前に、対応する必要がある&#39;の&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30092
 - bc30092
 helpviewer_keywords:
 - BC30092
 ms.assetid: 4bf49bb2-c69b-443d-aa58-cb40fcfb1370
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: de7bf3d104768aa8a049e2807dabe579d7dbfeb1
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: d117fa1a74e0ffec8e9cc32563de0d4c348e83f0
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33617456"
 ---
-# <a name="39next39-must-be-preceded-by-a-matching-39for39"></a><span data-ttu-id="1db2a-102">&#39;です。次へ &#39;一致する &#39; の前が必要&#39;です。</span><span class="sxs-lookup"><span data-stu-id="1db2a-102">&#39;Next&#39; must be preceded by a matching &#39;For&#39;</span></span>
-<span data-ttu-id="1db2a-103">`Next` ステートメントが発生していますが、対応する `For` または `For Each` ステートメントがありません。</span><span class="sxs-lookup"><span data-stu-id="1db2a-103">A `Next` statement occurs without a corresponding `For` or `For Each` statement.</span></span> <span data-ttu-id="1db2a-104">`Next` の前に、対応する `For` または `For Each` ステートメントを指定してください。</span><span class="sxs-lookup"><span data-stu-id="1db2a-104">`Next` must be preceded by a corresponding `For` or `For Each` statement.</span></span>  
+# <a name="39next39-must-be-preceded-by-a-matching-39for39"></a><span data-ttu-id="7eafc-102">&#39;[次へ]&#39;前に、対応する必要がある&#39;の&#39;</span><span class="sxs-lookup"><span data-stu-id="7eafc-102">&#39;Next&#39; must be preceded by a matching &#39;For&#39;</span></span>
+<span data-ttu-id="7eafc-103">`Next` ステートメントが発生していますが、対応する `For` または `For Each` ステートメントがありません。</span><span class="sxs-lookup"><span data-stu-id="7eafc-103">A `Next` statement occurs without a corresponding `For` or `For Each` statement.</span></span> <span data-ttu-id="7eafc-104">`Next` の前に、対応する `For` または `For Each` ステートメントを指定してください。</span><span class="sxs-lookup"><span data-stu-id="7eafc-104">`Next` must be preceded by a corresponding `For` or `For Each` statement.</span></span>  
   
- <span data-ttu-id="1db2a-105">**エラー ID:** BC30092</span><span class="sxs-lookup"><span data-stu-id="1db2a-105">**Error ID:** BC30092</span></span>  
+ <span data-ttu-id="7eafc-105">**エラー ID:** BC30092</span><span class="sxs-lookup"><span data-stu-id="7eafc-105">**Error ID:** BC30092</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1db2a-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="1db2a-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7eafc-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="7eafc-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="1db2a-107">この `For` ループが入れ子になった `For` ループのセットの一部である場合は、各ループが正しく終了していることを確認します。</span><span class="sxs-lookup"><span data-stu-id="1db2a-107">If this `For` loop is part of a set of nested `For` loops, make sure each loop is properly terminated.</span></span>  
+1.  <span data-ttu-id="7eafc-107">この `For` ループが入れ子になった `For` ループのセットの一部である場合は、各ループが正しく終了していることを確認します。</span><span class="sxs-lookup"><span data-stu-id="7eafc-107">If this `For` loop is part of a set of nested `For` loops, make sure each loop is properly terminated.</span></span>  
   
-2.  <span data-ttu-id="1db2a-108">`For` ループ内の他の制御構造が正しく終了していることを確認します。</span><span class="sxs-lookup"><span data-stu-id="1db2a-108">Verify that other control structures within the `For` loop are correctly terminated.</span></span>  
+2.  <span data-ttu-id="7eafc-108">`For` ループ内の他の制御構造が正しく終了していることを確認します。</span><span class="sxs-lookup"><span data-stu-id="7eafc-108">Verify that other control structures within the `For` loop are correctly terminated.</span></span>  
   
-3.  <span data-ttu-id="1db2a-109">この `For` ループが正しく書式設定されていることを確認します。</span><span class="sxs-lookup"><span data-stu-id="1db2a-109">Ensure that this `For` loop is correctly formatted.</span></span>  
+3.  <span data-ttu-id="7eafc-109">この `For` ループが正しく書式設定されていることを確認します。</span><span class="sxs-lookup"><span data-stu-id="7eafc-109">Ensure that this `For` loop is correctly formatted.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1db2a-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="1db2a-110">See Also</span></span>  
- [<span data-ttu-id="1db2a-111">For...Next ステートメント</span><span class="sxs-lookup"><span data-stu-id="1db2a-111">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)  
- [<span data-ttu-id="1db2a-112">For Each...Next ステートメント</span><span class="sxs-lookup"><span data-stu-id="1db2a-112">For Each...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-each-next-statement.md)
+## <a name="see-also"></a><span data-ttu-id="7eafc-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="7eafc-110">See Also</span></span>  
+ [<span data-ttu-id="7eafc-111">For...Next ステートメント</span><span class="sxs-lookup"><span data-stu-id="7eafc-111">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)  
+ [<span data-ttu-id="7eafc-112">For Each...Next ステートメント</span><span class="sxs-lookup"><span data-stu-id="7eafc-112">For Each...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-each-next-statement.md)
