--- a/docs/visual-basic/misc/bc30520.md
+++ b/docs/visual-basic/misc/bc30520.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33615787"
 ---
 # <a name="argument-matching-parameter-39ltparameternamegt39-narrows-from-39lttype1gt39-to-39lttype2gt39"></a><span data-ttu-id="ac6f6-102">パラメーターと一致する引数&#39; &lt;parametername&gt; &#39;から縮小変換&#39; &lt;type1&gt; &#39;に&#39; &lt;type2&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="ac6f6-102">Argument matching parameter &#39;&lt;parametername&gt;&#39; narrows from &#39;&lt;type1&gt;&#39; to &#39;&lt;type2&gt;&#39;</span></span>
 <span data-ttu-id="ac6f6-103">オーバーロードされたメソッドを呼び出しましたが、コンパイラで、縮小変換せずに呼び出すことのできるメソッドを検出できません。</span><span class="sxs-lookup"><span data-stu-id="ac6f6-103">You have made a call to an overloaded method, but the compiler cannot find a method that can be called without a narrowing conversion.</span></span> <span data-ttu-id="ac6f6-104">縮小変換により、有効値の一部を正確に保持できない可能性のあるデータ型に値が変更されます。</span><span class="sxs-lookup"><span data-stu-id="ac6f6-104">A narrowing conversion changes a value to a data type that might not be able to precisely hold some of the possible values.</span></span>  
