--- a/docs/visual-basic/misc/bc30666.md
+++ b/docs/visual-basic/misc/bc30666.md
@@ -1,38 +1,32 @@
 ---
-title: "&#39;です。Throw &#39;ステートメントは外側のオペランドを省略できません、&#39;です。Catch &#39;ステートメントまたは内部、&#39;です。最後に &#39;です。ステートメント"
+title: '&#39;スロー&#39;ステートメントは外側のオペランドを省略できません、&#39;キャッチ&#39;ステートメントまたは内側、 &#39;Finally&#39;ステートメント'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30666
 - bc30666
 helpviewer_keywords:
 - BC30666
 ms.assetid: a208a6ea-0e36-4bf1-8984-4de1a0e38a2a
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 5fa3be0ca47a4158b3abeef9801148e3f19d3b36
-ms.sourcegitcommit: c0dd436f6f8f44dc80dc43b07f6841a00b74b23f
+ms.openlocfilehash: e263e98cce568deb5597c4b03c1b8b6534d6b0d3
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 01/19/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33618356"
 ---
-# <a name="39throw39-statement-cannot-omit-operand-outside-a-39catch39-statement-or-inside-a-39finally39-statement"></a><span data-ttu-id="216fa-102">&#39;です。Throw &#39;ステートメントは外側のオペランドを省略できません、&#39;です。Catch &#39;ステートメントまたは内部、&#39;です。最後に &#39;です。ステートメント</span><span class="sxs-lookup"><span data-stu-id="216fa-102">&#39;Throw&#39; statement cannot omit operand outside a &#39;Catch&#39; statement or inside a &#39;Finally&#39; statement</span></span>
-<span data-ttu-id="216fa-103">`Throw` ステートメントの外側にある `Catch` ステートメントでは、例外オブジェクトの名前を指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="216fa-103">`Throw` statements outside of `Catch` statement must supply the name of an exception object.</span></span>  
+# <a name="39throw39-statement-cannot-omit-operand-outside-a-39catch39-statement-or-inside-a-39finally39-statement"></a><span data-ttu-id="1e5a5-102">&#39;スロー&#39;ステートメントは外側のオペランドを省略できません、&#39;キャッチ&#39;ステートメントまたは内側、 &#39;Finally&#39;ステートメント</span><span class="sxs-lookup"><span data-stu-id="1e5a5-102">&#39;Throw&#39; statement cannot omit operand outside a &#39;Catch&#39; statement or inside a &#39;Finally&#39; statement</span></span>
+<span data-ttu-id="1e5a5-103">`Throw` ステートメントの外側にある `Catch` ステートメントでは、例外オブジェクトの名前を指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="1e5a5-103">`Throw` statements outside of `Catch` statement must supply the name of an exception object.</span></span>  
   
- <span data-ttu-id="216fa-104">**エラー ID:** BC30666</span><span class="sxs-lookup"><span data-stu-id="216fa-104">**Error ID:** BC30666</span></span>  
+ <span data-ttu-id="1e5a5-104">**エラー ID:** BC30666</span><span class="sxs-lookup"><span data-stu-id="1e5a5-104">**Error ID:** BC30666</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="216fa-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="216fa-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1e5a5-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="1e5a5-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="216fa-106">`System.Exception`から派生した例外オブジェクトの名前を指定します。</span><span class="sxs-lookup"><span data-stu-id="216fa-106">Specify the name of an exception object derived from `System.Exception`.</span></span>  
+1.  <span data-ttu-id="1e5a5-106">`System.Exception`から派生した例外オブジェクトの名前を指定します。</span><span class="sxs-lookup"><span data-stu-id="1e5a5-106">Specify the name of an exception object derived from `System.Exception`.</span></span>  
   
-2.  <span data-ttu-id="216fa-107">`Throw` ステートメントが `Catch` ブロックの内側に配置されるようにコードを再構築します。</span><span class="sxs-lookup"><span data-stu-id="216fa-107">Restructure your code so that the `Throw` statement is inside a `Catch` block.</span></span>  
+2.  <span data-ttu-id="1e5a5-107">`Throw` ステートメントが `Catch` ブロックの内側に配置されるようにコードを再構築します。</span><span class="sxs-lookup"><span data-stu-id="1e5a5-107">Restructure your code so that the `Throw` statement is inside a `Catch` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="216fa-108">参照</span><span class="sxs-lookup"><span data-stu-id="216fa-108">See Also</span></span>  
- [<span data-ttu-id="216fa-109">Throw ステートメント</span><span class="sxs-lookup"><span data-stu-id="216fa-109">Throw Statement</span></span>](../../visual-basic/language-reference/statements/throw-statement.md)  
- [<span data-ttu-id="216fa-110">Try...Catch...Finally ステートメント</span><span class="sxs-lookup"><span data-stu-id="216fa-110">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)  
- [<span data-ttu-id="216fa-111">Visual Basic での例外クラス</span><span class="sxs-lookup"><span data-stu-id="216fa-111">Exception Class in Visual Basic</span></span>](http://msdn.microsoft.com/library/9aac396f-34ca-4afb-8e6c-e523cb690ba9)  
- [<span data-ttu-id="216fa-112">例外と Visual Basic でのエラー処理</span><span class="sxs-lookup"><span data-stu-id="216fa-112">Exception and Error Handling in Visual Basic</span></span>](http://msdn.microsoft.com/library/3e351e73-cf23-40ab-8b60-05794160529e)
+## <a name="see-also"></a><span data-ttu-id="1e5a5-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="1e5a5-108">See Also</span></span>  
+ [<span data-ttu-id="1e5a5-109">Throw ステートメント</span><span class="sxs-lookup"><span data-stu-id="1e5a5-109">Throw Statement</span></span>](../../visual-basic/language-reference/statements/throw-statement.md)  
+ [<span data-ttu-id="1e5a5-110">Try...Catch...Finally ステートメント</span><span class="sxs-lookup"><span data-stu-id="1e5a5-110">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)  
+ [<span data-ttu-id="1e5a5-111">Visual Basic での例外クラス</span><span class="sxs-lookup"><span data-stu-id="1e5a5-111">Exception Class in Visual Basic</span></span>](http://msdn.microsoft.com/library/9aac396f-34ca-4afb-8e6c-e523cb690ba9)  
+ [<span data-ttu-id="1e5a5-112">例外と Visual Basic でのエラー処理</span><span class="sxs-lookup"><span data-stu-id="1e5a5-112">Exception and Error Handling in Visual Basic</span></span>](http://msdn.microsoft.com/library/3e351e73-cf23-40ab-8b60-05794160529e)
