--- a/docs/visual-basic/misc/bc31193.md
+++ b/docs/visual-basic/misc/bc31193.md
@@ -1,39 +1,33 @@
 ---
-title: できません convert &#39; type1 &#39;&#39; type2 &#39;
+title: 変換できない&#39;type1&#39;に&#39;type2&#39;
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc31193
 - vbc31193
 helpviewer_keywords:
 - BC31193
 ms.assetid: f25a9f5b-7741-4cd6-b85a-b19037ed8e49
-caps.latest.revision: 5
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: c8c676a3399f7266c7c6e8e4b38e19afb9ce43c0
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 35b4d36437a89ad791b474a94650203c4b180457
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33625887"
 ---
-# <a name="cannot-convert-39type139-to-39type239"></a><span data-ttu-id="d6033-102">できません convert &#39; type1 &#39;&#39; type2 &#39;</span><span class="sxs-lookup"><span data-stu-id="d6033-102">Cannot convert &#39;type1&#39; to &#39;type2&#39;</span></span>
-<span data-ttu-id="d6033-103">'type1' を 'type2' に変換できません。</span><span class="sxs-lookup"><span data-stu-id="d6033-103">Cannot convert 'type1' to 'type2'.</span></span> <span data-ttu-id="d6033-104">'parentElement' の最初の要素の文字列値は、'Value' プロパティを使用して取得できます。</span><span class="sxs-lookup"><span data-stu-id="d6033-104">You can use the 'Value' property to get the string value of the first element of 'parentElement'.</span></span>  
+# <a name="cannot-convert-39type139-to-39type239"></a><span data-ttu-id="be87c-102">変換できない&#39;type1&#39;に&#39;type2&#39;</span><span class="sxs-lookup"><span data-stu-id="be87c-102">Cannot convert &#39;type1&#39; to &#39;type2&#39;</span></span>
+<span data-ttu-id="be87c-103">'type1' を 'type2' に変換できません。</span><span class="sxs-lookup"><span data-stu-id="be87c-103">Cannot convert 'type1' to 'type2'.</span></span> <span data-ttu-id="be87c-104">'parentElement' の最初の要素の文字列値は、'Value' プロパティを使用して取得できます。</span><span class="sxs-lookup"><span data-stu-id="be87c-104">You can use the 'Value' property to get the string value of the first element of 'parentElement'.</span></span>  
   
- <span data-ttu-id="d6033-105">XML リテラルを特定の型を暗黙的にキャストしようとしました。</span><span class="sxs-lookup"><span data-stu-id="d6033-105">An attempt has been made to implicitly cast an XML literal to a specific type.</span></span> <span data-ttu-id="d6033-106">XML リテラルは、指定した型に暗黙的にキャストできません。</span><span class="sxs-lookup"><span data-stu-id="d6033-106">The XML literal cannot be implicitly cast to the specified type.</span></span>  
+ <span data-ttu-id="be87c-105">XML リテラルを特定の型を暗黙的にキャストしようとしました。</span><span class="sxs-lookup"><span data-stu-id="be87c-105">An attempt has been made to implicitly cast an XML literal to a specific type.</span></span> <span data-ttu-id="be87c-106">XML リテラルは、指定した型に暗黙的にキャストできません。</span><span class="sxs-lookup"><span data-stu-id="be87c-106">The XML literal cannot be implicitly cast to the specified type.</span></span>  
   
- <span data-ttu-id="d6033-107">**エラー ID:** BC31193</span><span class="sxs-lookup"><span data-stu-id="d6033-107">**Error ID:** BC31193</span></span>  
+ <span data-ttu-id="be87c-107">**エラー ID:** BC31193</span><span class="sxs-lookup"><span data-stu-id="be87c-107">**Error ID:** BC31193</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d6033-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="d6033-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="be87c-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="be87c-108">To correct this error</span></span>  
   
--   <span data-ttu-id="d6033-109">XML リテラルの `Value` プロパティを使用して、その値を `String`として参照します。</span><span class="sxs-lookup"><span data-stu-id="d6033-109">Use the `Value` property of the XML literal to reference its value as a `String`.</span></span> <span data-ttu-id="d6033-110">`CType` 関数、別の型変換関数、または <xref:System.Convert> クラスを使用して、指定した型として値をキャストします。</span><span class="sxs-lookup"><span data-stu-id="d6033-110">Use the `CType` function, another type conversion function, or the <xref:System.Convert> class to cast the value as the specified type.</span></span>  
+-   <span data-ttu-id="be87c-109">XML リテラルの `Value` プロパティを使用して、その値を `String`として参照します。</span><span class="sxs-lookup"><span data-stu-id="be87c-109">Use the `Value` property of the XML literal to reference its value as a `String`.</span></span> <span data-ttu-id="be87c-110">`CType` 関数、別の型変換関数、または <xref:System.Convert> クラスを使用して、指定した型として値をキャストします。</span><span class="sxs-lookup"><span data-stu-id="be87c-110">Use the `CType` function, another type conversion function, or the <xref:System.Convert> class to cast the value as the specified type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d6033-111">関連項目</span><span class="sxs-lookup"><span data-stu-id="d6033-111">See Also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="be87c-111">関連項目</span><span class="sxs-lookup"><span data-stu-id="be87c-111">See Also</span></span>  
  <xref:System.Convert>  
- [<span data-ttu-id="d6033-112">Visual Basic での XML へのアクセス</span><span class="sxs-lookup"><span data-stu-id="d6033-112">Accessing XML in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/xml/accessing-xml.md)  
- [<span data-ttu-id="d6033-113">データ型変換関数</span><span class="sxs-lookup"><span data-stu-id="d6033-113">Type Conversion Functions</span></span>](../../visual-basic/language-reference/functions/type-conversion-functions.md)  
- [<span data-ttu-id="d6033-114">XML リテラル</span><span class="sxs-lookup"><span data-stu-id="d6033-114">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
- [<span data-ttu-id="d6033-115">XML</span><span class="sxs-lookup"><span data-stu-id="d6033-115">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+ [<span data-ttu-id="be87c-112">Visual Basic での XML へのアクセス</span><span class="sxs-lookup"><span data-stu-id="be87c-112">Accessing XML in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/xml/accessing-xml.md)  
+ [<span data-ttu-id="be87c-113">データ型変換関数</span><span class="sxs-lookup"><span data-stu-id="be87c-113">Type Conversion Functions</span></span>](../../visual-basic/language-reference/functions/type-conversion-functions.md)  
+ [<span data-ttu-id="be87c-114">XML リテラル</span><span class="sxs-lookup"><span data-stu-id="be87c-114">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
+ [<span data-ttu-id="be87c-115">XML</span><span class="sxs-lookup"><span data-stu-id="be87c-115">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
