--- a/docs/visual-basic/misc/bc31197.md
+++ b/docs/visual-basic/misc/bc31197.md
@@ -1,35 +1,29 @@
 ---
 title: 全角文字は、XML の区切り記号としては無効です
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc31197
 - bc31197
 helpviewer_keywords:
 - BC31197
 ms.assetid: f5d724f8-545b-4cf8-9606-12c63814c6e8
-caps.latest.revision: 6
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 57e9213a8c416b8a808bbab335c385920729525b
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: d1e84e724db507d4385f6c88d9d68d75c3d63329
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33624856"
 ---
-# <a name="full-width-characters-are-not-valid-as-xml-delimiters"></a><span data-ttu-id="3112e-102">全角文字は、XML の区切り記号としては無効です</span><span class="sxs-lookup"><span data-stu-id="3112e-102">Full width characters are not valid as XML delimiters</span></span>
-<span data-ttu-id="3112e-103">区切り記号として全角文字を含む、XML リテラルが定義されています。</span><span class="sxs-lookup"><span data-stu-id="3112e-103">An XML literal has been defined that includes a full-width character as a delimiter.</span></span> <span data-ttu-id="3112e-104">全角文字はワイド文字またはマルチバイト文字とも呼ばれます。</span><span class="sxs-lookup"><span data-stu-id="3112e-104">Full-width characters are also referred to as wide or multi-byte characters.</span></span>  
+# <a name="full-width-characters-are-not-valid-as-xml-delimiters"></a><span data-ttu-id="04180-102">全角文字は、XML の区切り記号としては無効です</span><span class="sxs-lookup"><span data-stu-id="04180-102">Full width characters are not valid as XML delimiters</span></span>
+<span data-ttu-id="04180-103">区切り記号として全角文字を含む、XML リテラルが定義されています。</span><span class="sxs-lookup"><span data-stu-id="04180-103">An XML literal has been defined that includes a full-width character as a delimiter.</span></span> <span data-ttu-id="04180-104">全角文字はワイド文字またはマルチバイト文字とも呼ばれます。</span><span class="sxs-lookup"><span data-stu-id="04180-104">Full-width characters are also referred to as wide or multi-byte characters.</span></span>  
   
- <span data-ttu-id="3112e-105">**エラー ID:** BC31197</span><span class="sxs-lookup"><span data-stu-id="3112e-105">**Error ID:** BC31197</span></span>  
+ <span data-ttu-id="04180-105">**エラー ID:** BC31197</span><span class="sxs-lookup"><span data-stu-id="04180-105">**Error ID:** BC31197</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3112e-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="3112e-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="04180-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="04180-106">To correct this error</span></span>  
   
--   <span data-ttu-id="3112e-107">XML リテラルの定義から全角文字を削除し、有効な ANSI 区切り文字に置き換えます。</span><span class="sxs-lookup"><span data-stu-id="3112e-107">Remove the full-width character from the XML literal definition and replace it with a valid ANSI delimiter character.</span></span> <span data-ttu-id="3112e-108">有効な区切り記号の文字には `<`、 `>`、 `=`、 `:`、 `/`があります。</span><span class="sxs-lookup"><span data-stu-id="3112e-108">Valid delimiter characters include the following: `<`, `>`, `=`, `:`, `/`.</span></span>  
+-   <span data-ttu-id="04180-107">XML リテラルの定義から全角文字を削除し、有効な ANSI 区切り文字に置き換えます。</span><span class="sxs-lookup"><span data-stu-id="04180-107">Remove the full-width character from the XML literal definition and replace it with a valid ANSI delimiter character.</span></span> <span data-ttu-id="04180-108">有効な区切り記号の文字には `<`、 `>`、 `=`、 `:`、 `/`があります。</span><span class="sxs-lookup"><span data-stu-id="04180-108">Valid delimiter characters include the following: `<`, `>`, `=`, `:`, `/`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3112e-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="3112e-109">See Also</span></span>  
- [<span data-ttu-id="3112e-110">XML リテラル</span><span class="sxs-lookup"><span data-stu-id="3112e-110">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
- [<span data-ttu-id="3112e-111">.NET Framework における文字エンコーディング</span><span class="sxs-lookup"><span data-stu-id="3112e-111">Character Encoding in the .NET Framework</span></span>](http://msdn.microsoft.com/library/bf6d9823-4c2d-48af-b280-919c5af66ae9)  
- [<span data-ttu-id="3112e-112">XML</span><span class="sxs-lookup"><span data-stu-id="3112e-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+## <a name="see-also"></a><span data-ttu-id="04180-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="04180-109">See Also</span></span>  
+ [<span data-ttu-id="04180-110">XML リテラル</span><span class="sxs-lookup"><span data-stu-id="04180-110">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
+ [<span data-ttu-id="04180-111">.NET Framework における文字エンコーディング</span><span class="sxs-lookup"><span data-stu-id="04180-111">Character Encoding in the .NET Framework</span></span>](http://msdn.microsoft.com/library/bf6d9823-4c2d-48af-b280-919c5af66ae9)  
+ [<span data-ttu-id="04180-112">XML</span><span class="sxs-lookup"><span data-stu-id="04180-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
