--- a/docs/visual-basic/misc/bc31400.md
+++ b/docs/visual-basic/misc/bc31400.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33624073"
 ---
 # <a name="local-variables-within-methods-of-structures-cannot-be-declared-39static39"></a><span data-ttu-id="4dd5d-102">構造体のメソッド内のローカル変数を宣言することはできません&#39;静的&#39;</span><span class="sxs-lookup"><span data-stu-id="4dd5d-102">Local variables within methods of structures cannot be declared &#39;Static&#39;</span></span>
 <span data-ttu-id="4dd5d-103">構造体内のローカル変数には `Static` 修飾子を使用できません。</span><span class="sxs-lookup"><span data-stu-id="4dd5d-103">The `Static` modifier cannot be used with local variables in structures.</span></span>  
