--- a/docs/visual-basic/misc/bc31504.md
+++ b/docs/visual-basic/misc/bc31504.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33624148"
 ---
 # <a name="39lttypenamegt39-cannot-be-used-as-an-attribute-because-it-does-not-inherit-from-39systemattribute39"></a><span data-ttu-id="6aa89-102">&#39;&lt;typename&gt; &#39;から継承されていないために、属性として使用することはできません&#39;System.Attribute&#39;</span><span class="sxs-lookup"><span data-stu-id="6aa89-102">&#39;&lt;typename&gt;&#39; cannot be used as an attribute because it does not inherit from &#39;System.Attribute&#39;</span></span>
 <span data-ttu-id="6aa89-103">`System.Attribute`から派生していないクラスを使用しようとしました。</span><span class="sxs-lookup"><span data-stu-id="6aa89-103">An attempt was made to use a class that is not derived from `System.Attribute`.</span></span>  
