--- a/docs/visual-basic/misc/bc32006.md
+++ b/docs/visual-basic/misc/bc32006.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33623972"
 ---
 # <a name="39char39-values-cannot-be-converted-to-39lttypenamegt39"></a><span data-ttu-id="be840-102">&#39;Char&#39;値に変換できない&#39; &lt;typename&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="be840-102">&#39;Char&#39; values cannot be converted to &#39;&lt;typename&gt;&#39;</span></span>
 <span data-ttu-id="be840-103">'Char' 値に変換できません '\<typename >' です。</span><span class="sxs-lookup"><span data-stu-id="be840-103">'Char' values cannot be converted to '\<typename>'.</span></span> <span data-ttu-id="be840-104">文字を Unicode 値として扱うには Microsoft.VisualBasic.AscW を、数字として扱うには Microsoft.VisualBasic.Val を使用します。</span><span class="sxs-lookup"><span data-stu-id="be840-104">Use Microsoft.VisualBasic.AscW to interpret a character as a Unicode value or Microsoft.VisualBasic.Val to interpret it as a digit.</span></span>  
