--- a/docs/visual-basic/misc/bc32106.md
+++ b/docs/visual-basic/misc/bc32106.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33629416"
 ---
 # <a name="type-argument-39lttypeargumentnamegt39-does-not-satisfy-the-39class39-constraint-for-type-parameter-39lttypeparameternamegt39"></a><span data-ttu-id="1c568-102">引数を入力&#39; &lt;typeargumentname&gt; &#39;を満たさない、&#39;クラス&#39;型パラメーター制約を&#39; &lt;typeparametername&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="1c568-102">Type argument &#39;&lt;typeargumentname&gt;&#39; does not satisfy the &#39;Class&#39; constraint for type parameter &#39;&lt;typeparametername&gt;&#39;</span></span>
 <span data-ttu-id="1c568-103">ジェネリック型に指定された型引数は、対応する型パラメーターの参照型の制約を満たしていません。</span><span class="sxs-lookup"><span data-stu-id="1c568-103">A type argument supplied to a generic type does not satisfy the reference type constraint on its corresponding type parameter.</span></span>  
