--- a/docs/visual-basic/misc/bc36560.md
+++ b/docs/visual-basic/misc/bc36560.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33630861"
 ---
 # <a name="type-characters-cannot-be-used-in-anonymous-type-declarations"></a><span data-ttu-id="3563c-102">型文字を匿名型の宣言で使用することはできません</span><span class="sxs-lookup"><span data-stu-id="3563c-102">Type characters cannot be used in anonymous type declarations</span></span>
 <span data-ttu-id="3563c-103">匿名型のインスタンスを宣言するときは、プロパティ名で型文字を使用できません。</span><span class="sxs-lookup"><span data-stu-id="3563c-103">You cannot use a type character on a property name when you declare an instance of an anonymous type.</span></span> <span data-ttu-id="3563c-104">プロパティのデータ型は、それに割り当てられた値から推論されます。</span><span class="sxs-lookup"><span data-stu-id="3563c-104">The data type of the property is inferred from the value assigned to it.</span></span> <span data-ttu-id="3563c-105">たとえば、次の宣言は無効です。</span><span class="sxs-lookup"><span data-stu-id="3563c-105">For example, the following declarations are not valid.</span></span>  
