--- a/docs/visual-basic/misc/bc36581.md
+++ b/docs/visual-basic/misc/bc36581.md
@@ -1,39 +1,33 @@
 ---
-title: '拡張メソッド &#39; の引数を入力します。&lt;methodName&gt;&#39; で定義されている (& a) #39;&lt;typeName&gt;&#39; デリゲート &#39; から推論できませんでした&lt;delagateName&gt;&#39;です。'
+title: 拡張メソッドの引数が入力&#39; &lt;methodName&gt; &#39;で定義されている&#39; &lt;typeName&gt; &#39;デリゲートから推論できませんでした&#39; &lt;delagateName&gt;&#39;
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc36581
 - vbc36581
 helpviewer_keywords:
 - BC36581
 ms.assetid: 2bb9ca8d-7293-40e9-9285-e20b8254b3af
-caps.latest.revision: 7
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 0d6698a54237a13efb84cdf383bf9d93aeb89c67
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 45135e62e17ae71a854e73d2bfa91b3000041d7f
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33630680"
 ---
-# <a name="type-arguments-for-extension-method-39ltmethodnamegt39-defined-in-39lttypenamegt39-could-not-be-inferred-from-the-delegate-39ltdelagatenamegt39"></a><span data-ttu-id="32804-102">拡張メソッド &#39; の引数を入力します。&lt;methodName&gt;&#39; で定義されている (& a) #39;&lt;typeName&gt;&#39; デリゲート &#39; から推論できませんでした&lt;delagateName&gt;&#39;です。</span><span class="sxs-lookup"><span data-stu-id="32804-102">Type arguments for extension method &#39;&lt;methodName&gt;&#39; defined in &#39;&lt;typeName&gt;&#39; could not be inferred from the delegate &#39;&lt;delagateName&gt;&#39;</span></span>
-<span data-ttu-id="32804-103">代入ステートメントは、 `AddressOf` を使用してジェネリック拡張メソッドのアドレスをデリゲートに割り当てますが、拡張メソッドに型引数が指定されていません。</span><span class="sxs-lookup"><span data-stu-id="32804-103">An assignment statement uses `AddressOf` to assign the address of a generic extension method to a delegate, but it does not supply any type arguments to the extension method.</span></span>  
+# <a name="type-arguments-for-extension-method-39ltmethodnamegt39-defined-in-39lttypenamegt39-could-not-be-inferred-from-the-delegate-39ltdelagatenamegt39"></a><span data-ttu-id="581b4-102">拡張メソッドの引数が入力&#39; &lt;methodName&gt; &#39;で定義されている&#39; &lt;typeName&gt; &#39;デリゲートから推論できませんでした&#39; &lt;delagateName&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="581b4-102">Type arguments for extension method &#39;&lt;methodName&gt;&#39; defined in &#39;&lt;typeName&gt;&#39; could not be inferred from the delegate &#39;&lt;delagateName&gt;&#39;</span></span>
+<span data-ttu-id="581b4-103">代入ステートメントは、 `AddressOf` を使用してジェネリック拡張メソッドのアドレスをデリゲートに割り当てますが、拡張メソッドに型引数が指定されていません。</span><span class="sxs-lookup"><span data-stu-id="581b4-103">An assignment statement uses `AddressOf` to assign the address of a generic extension method to a delegate, but it does not supply any type arguments to the extension method.</span></span>  
   
- <span data-ttu-id="32804-104">通常、ジェネリック メソッドを呼び出す場合は、ジェネリック メソッドが定義する型パラメーターごとに型引数を指定します。</span><span class="sxs-lookup"><span data-stu-id="32804-104">Normally, when you invoke a generic method, you supply a type argument for each type parameter that the generic method defines.</span></span> <span data-ttu-id="32804-105">型引数を指定しない場合、コンパイラは型パラメーターに渡される型を推定しようとします。</span><span class="sxs-lookup"><span data-stu-id="32804-105">If you do not supply any type arguments, the compiler attempts to infer the types to be passed to the type parameters.</span></span> <span data-ttu-id="32804-106">コンテキストにコンパイラが型を推論するのに十分な情報が提供されていない場合は、エラーが生成されます。</span><span class="sxs-lookup"><span data-stu-id="32804-106">If the context does not provide enough information for the compiler to infer the types, an error is generated.</span></span>  
+ <span data-ttu-id="581b4-104">通常、ジェネリック メソッドを呼び出す場合は、ジェネリック メソッドが定義する型パラメーターごとに型引数を指定します。</span><span class="sxs-lookup"><span data-stu-id="581b4-104">Normally, when you invoke a generic method, you supply a type argument for each type parameter that the generic method defines.</span></span> <span data-ttu-id="581b4-105">型引数を指定しない場合、コンパイラは型パラメーターに渡される型を推定しようとします。</span><span class="sxs-lookup"><span data-stu-id="581b4-105">If you do not supply any type arguments, the compiler attempts to infer the types to be passed to the type parameters.</span></span> <span data-ttu-id="581b4-106">コンテキストにコンパイラが型を推論するのに十分な情報が提供されていない場合は、エラーが生成されます。</span><span class="sxs-lookup"><span data-stu-id="581b4-106">If the context does not provide enough information for the compiler to infer the types, an error is generated.</span></span>  
   
- <span data-ttu-id="32804-107">**エラー ID:** BC36581</span><span class="sxs-lookup"><span data-stu-id="32804-107">**Error ID:** BC36581</span></span>  
+ <span data-ttu-id="581b4-107">**エラー ID:** BC36581</span><span class="sxs-lookup"><span data-stu-id="581b4-107">**Error ID:** BC36581</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="32804-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="32804-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="581b4-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="581b4-108">To correct this error</span></span>  
   
--   <span data-ttu-id="32804-109">`AddressOf` 式で、拡張メソッドの型引数を指定します。</span><span class="sxs-lookup"><span data-stu-id="32804-109">In the `AddressOf` expression, specify the type arguments for the extension method.</span></span>  
+-   <span data-ttu-id="581b4-109">`AddressOf` 式で、拡張メソッドの型引数を指定します。</span><span class="sxs-lookup"><span data-stu-id="581b4-109">In the `AddressOf` expression, specify the type arguments for the extension method.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="32804-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="32804-110">See Also</span></span>  
- [<span data-ttu-id="32804-111">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="32804-111">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [<span data-ttu-id="32804-112">AddressOf 演算子</span><span class="sxs-lookup"><span data-stu-id="32804-112">AddressOf Operator</span></span>](../../visual-basic/language-reference/operators/addressof-operator.md)  
- [<span data-ttu-id="32804-113">Visual Basic におけるジェネリック プロシージャ</span><span class="sxs-lookup"><span data-stu-id="32804-113">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)  
- [<span data-ttu-id="32804-114">型リスト</span><span class="sxs-lookup"><span data-stu-id="32804-114">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)  
- [<span data-ttu-id="32804-115">拡張メソッド</span><span class="sxs-lookup"><span data-stu-id="32804-115">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
+## <a name="see-also"></a><span data-ttu-id="581b4-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="581b4-110">See Also</span></span>  
+ [<span data-ttu-id="581b4-111">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="581b4-111">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+ [<span data-ttu-id="581b4-112">AddressOf 演算子</span><span class="sxs-lookup"><span data-stu-id="581b4-112">AddressOf Operator</span></span>](../../visual-basic/language-reference/operators/addressof-operator.md)  
+ [<span data-ttu-id="581b4-113">Visual Basic におけるジェネリック プロシージャ</span><span class="sxs-lookup"><span data-stu-id="581b4-113">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)  
+ [<span data-ttu-id="581b4-114">型リスト</span><span class="sxs-lookup"><span data-stu-id="581b4-114">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)  
+ [<span data-ttu-id="581b4-115">拡張メソッド</span><span class="sxs-lookup"><span data-stu-id="581b4-115">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
