--- a/docs/visual-basic/misc/bc41005.md
+++ b/docs/visual-basic/misc/bc41005.md
@@ -1,38 +1,32 @@
 ---
-title: せず演算子、&#39;です。として &#39;です。句です。型のオブジェクトと見なされます
+title: せず演算子、&#39;として&#39;句です。型のオブジェクトと見なされます
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc41005
 - bc41005
 helpviewer_keywords:
 - BC41005
 ms.assetid: 42be84ed-7aa6-4ac0-9dd4-663e90f13e09
-caps.latest.revision: 6
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 4e815be4c0275ac24169d28e63abdc77ae4d139f
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: d1da4918001c43af6e5277f1a3671ac0ebe5f8d4
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33634327"
 ---
-# <a name="operator-without-an-39as39-clause-type-of-object-assumed"></a><span data-ttu-id="6a447-102">せず演算子、&#39;です。として &#39;です。句です。型のオブジェクトと見なされます</span><span class="sxs-lookup"><span data-stu-id="6a447-102">Operator without an &#39;As&#39; clause; type of Object assumed</span></span>
-<span data-ttu-id="6a447-103">演算子プロシージャは `As` 句を指定しません。</span><span class="sxs-lookup"><span data-stu-id="6a447-103">An operator procedure does not specify an `As` clause.</span></span>  
+# <a name="operator-without-an-39as39-clause-type-of-object-assumed"></a><span data-ttu-id="03e96-102">せず演算子、&#39;として&#39;句です。型のオブジェクトと見なされます</span><span class="sxs-lookup"><span data-stu-id="03e96-102">Operator without an &#39;As&#39; clause; type of Object assumed</span></span>
+<span data-ttu-id="03e96-103">演算子プロシージャは `As` 句を指定しません。</span><span class="sxs-lookup"><span data-stu-id="03e96-103">An operator procedure does not specify an `As` clause.</span></span>  
   
- <span data-ttu-id="6a447-104">`As` 句は、プログラミング要素に関連するデータ型を指定します。</span><span class="sxs-lookup"><span data-stu-id="6a447-104">An `As` clause identifies a data type to be associated with a programming element.</span></span> <span data-ttu-id="6a447-105">[Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md)で、この句は演算子プロシージャが呼び出しコードに返す値のデータ型を指定します。</span><span class="sxs-lookup"><span data-stu-id="6a447-105">In an [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md), it specifies the data type of the value the operator procedure returns to the calling code.</span></span> <span data-ttu-id="6a447-106">`As` ステートメントに `Operator` 句を含めない場合、戻り値のデータ型は既定で `Object`になります。</span><span class="sxs-lookup"><span data-stu-id="6a447-106">If you do not include an `As` clause in the `Operator` statement, the return data type defaults to `Object`.</span></span>  
+ <span data-ttu-id="03e96-104">`As` 句は、プログラミング要素に関連付けられるデータ型を指定します。</span><span class="sxs-lookup"><span data-stu-id="03e96-104">An `As` clause identifies a data type to be associated with a programming element.</span></span> <span data-ttu-id="03e96-105">[Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md)で、この句は演算子プロシージャが呼び出しコードに返す値のデータ型を指定します。</span><span class="sxs-lookup"><span data-stu-id="03e96-105">In an [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md), it specifies the data type of the value the operator procedure returns to the calling code.</span></span> <span data-ttu-id="03e96-106">`As` ステートメントに `Operator` 句を含めない場合、戻り値のデータ型は既定で `Object`になります。</span><span class="sxs-lookup"><span data-stu-id="03e96-106">If you do not include an `As` clause in the `Operator` statement, the return data type defaults to `Object`.</span></span>  
   
- <span data-ttu-id="6a447-107">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="6a447-107">By default, this message is a warning.</span></span> <span data-ttu-id="6a447-108">警告を非表示にする方法や、警告をエラーとして扱う方法の詳細については、「 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="6a447-108">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="03e96-107">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="03e96-107">By default, this message is a warning.</span></span> <span data-ttu-id="03e96-108">警告を非表示にする方法や、警告をエラーとして扱う方法の詳細については、「 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="03e96-108">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="6a447-109">**エラー ID:** BC41005</span><span class="sxs-lookup"><span data-stu-id="6a447-109">**Error ID:** BC41005</span></span>  
+ <span data-ttu-id="03e96-109">**エラー ID:** BC41005</span><span class="sxs-lookup"><span data-stu-id="03e96-109">**Error ID:** BC41005</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6a447-110">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="6a447-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="03e96-110">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="03e96-110">To correct this error</span></span>  
   
--   <span data-ttu-id="6a447-111">`As` ステートメントに `Operator` 句を含めて、戻り値のデータ型を指定します。</span><span class="sxs-lookup"><span data-stu-id="6a447-111">Include an `As` clause in the `Operator` statement to specify the return data type.</span></span>  
+-   <span data-ttu-id="03e96-111">`As` ステートメントに `Operator` 句を含めて、戻り値のデータ型を指定します。</span><span class="sxs-lookup"><span data-stu-id="03e96-111">Include an `As` clause in the `Operator` statement to specify the return data type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6a447-112">関連項目</span><span class="sxs-lookup"><span data-stu-id="6a447-112">See Also</span></span>  
- [<span data-ttu-id="6a447-113">演算子プロシージャ</span><span class="sxs-lookup"><span data-stu-id="6a447-113">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [<span data-ttu-id="6a447-114">Operator ステートメント</span><span class="sxs-lookup"><span data-stu-id="6a447-114">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
+## <a name="see-also"></a><span data-ttu-id="03e96-112">関連項目</span><span class="sxs-lookup"><span data-stu-id="03e96-112">See Also</span></span>  
+ [<span data-ttu-id="03e96-113">演算子プロシージャ</span><span class="sxs-lookup"><span data-stu-id="03e96-113">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
+ [<span data-ttu-id="03e96-114">Operator ステートメント</span><span class="sxs-lookup"><span data-stu-id="03e96-114">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
