commit translated contents

--- a/docs/visual-basic/misc/bc30133.md
+++ b/docs/visual-basic/misc/bc30133.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33614613"
 ---
 # <a name="39goto39-statements-are-not-valid-in-the-immediate-window"></a>&#39;GoTo&#39;ステートメントは、イミディ エイト ウィンドウでは有効ではありません。
 `GoTo` ステートメントは分岐を行います。これはデバッグ コンテキストで使用できません。  
