--- a/docs/visual-basic/misc/bc30379.md
+++ b/docs/visual-basic/misc/bc30379.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611451"
 ---
 # <a name="39catch39-cannot-appear-after-39finally39-within-a-39try39-statement"></a>&#39;キャッチ&#39;後に表示されることはできません&#39;最後に&#39;内で、&#39;再試行&#39;ステートメント
 コード内で `Catch` ステートメントが、 `Finally` ステートメント ブロックの末尾の `Try` の後にあります。 `Catch` は `Try...Catch...Finally` ステートメント ブロック内に置く必要があります。  
