--- a/docs/visual-basic/misc/bc30711.md
+++ b/docs/visual-basic/misc/bc30711.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33616243"
 ---
 # <a name="cannot-set-the-value-of-a-local-variable-for-a-method-that-is-not-at-the-top-of-the-stack"></a>スタックの一番上にないメソッドのローカル変数の値を設定することはできません。
 呼び出しスタックの一番上にある場合にのみ、変数を変更することができます。 たとえば、 `procedure1` が `procedure2` を呼び出し、現在の位置が `procedure1`である場合、 `procedure2`内の変数を変更することはできません。  
