--- a/docs/visual-basic/misc/bc31024.md
+++ b/docs/visual-basic/misc/bc31024.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33619344"
 ---
 # <a name="unable-to-create-a-net-runtime-interface-lterrorgt"></a>.NET ランタイム インターフェイスを作成することができません:&lt;エラー&gt;
 インターフェイスの作成中、またはインターフェイスのメソッド呼び出しが失敗したときに、内部コンパイラ エラーが発生しました。  
