--- a/docs/visual-basic/misc/bc30177.md
+++ b/docs/visual-basic/misc/bc30177.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613541"
 ---
 # <a name="only-one-of-39notoverridable39-39mustoverride39-or-39overridable39-can-be-specified"></a>1 つのみ&#39;NotOverridable&#39;、 &#39;MustOverride&#39;、または&#39;Overridable&#39;を指定できます
 競合するオーバーライドの指定が、要素宣言で発生します。 オーバーライド キーワードは、相互に排他的です。  
