--- a/docs/visual-basic/misc/bc30273.md
+++ b/docs/visual-basic/misc/bc30273.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611397"
 ---
 # <a name="39ltspecifiergt39-is-not-valid-on-an-interface-property-declaration"></a>&#39;&lt;指定子&gt;&#39;インターフェイス プロパティ宣言で無効です
 インターフェイス内の `Property` ステートメントに、 `Implements`のような無効なキーワードが含まれています。 インターフェイスは、メンバーを定義することのみが可能で、実装はできません。  
