--- a/docs/visual-basic/misc/bc30301.md
+++ b/docs/visual-basic/misc/bc30301.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613141"
 ---
 # <a name="39ltmethod1gt39-and-39ltmethod2gt39-cannot-overload-each-other-because-they-differ-only-by-return-types"></a>&#39;&lt;method1&gt; &#39;と&#39; &lt;method2&gt; &#39;戻り値の型のみが異なるために、お互いをオーバー ロードすることはできません
 メソッドを、戻り値の型のみが異なるメソッドでオーバーロードしようとしました。 オーバーロードする際は、メソッドの任意の 2 つのバージョンを引数リストによって区別する必要があります。メソッドを区別するのに、引数リスト以外のものを使用することはできません。  
