--- a/docs/visual-basic/misc/bc30395.md
+++ b/docs/visual-basic/misc/bc30395.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611008"
 ---
 # <a name="39ltspecifiergt39-is-not-valid-on-a-structure-declaration"></a>&#39;&lt;指定子&gt;&#39;は構造体の宣言では無効
 `Dim` または `Override`などの指定子を使用していますが、 `Structure` 宣言では使用できません。  
