--- a/docs/visual-basic/misc/bc30408.md
+++ b/docs/visual-basic/misc/bc30408.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611513"
 ---
 # <a name="method-39ltmethodnamegt39-does-not-have-the-same-signature-as-delegate-39ltdelegatenamegt39"></a>メソッド&#39; &lt;methodname&gt; &#39;デリゲートと同じシグネチャがありません&#39; &lt;delegatename&gt;&#39;
 メソッドのシグネチャと、使用しようとしているデリゲートのシグネチャが一致していません。 `Delegate` ステートメントは、デリゲート クラスのパラメーターの型と戻り値の型を定義します。 パラメーター、型、および戻り値の型が一致するプロシージャを使用すると、このデリゲート型のインスタンスを作成できる場合があります。 各デリゲート クラスでは、オブジェクト メソッドの仕様を渡すコンストラクターを定義します。  
