--- a/docs/visual-basic/misc/bc30437.md
+++ b/docs/visual-basic/misc/bc30437.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33612542"
 ---
 # <a name="39ltmethod1gt39-cannot-override-39ltmethod2gt39-because-they-differ-by-their-return-types"></a>&#39;&lt;method1&gt; &#39;オーバーライドできません&#39; &lt;method2&gt; &#39;が異なるため、戻り値の型
 戻り値の型が異なる別のメソッドを使用してメソッドをオーバーライドしようとしました。 型は、同じ名前とシグネチャを持つメソッドを宣言し、 `Overrides` 修飾子でその宣言をマークして、継承したオーバーライド可能なメソッドをオーバーライドできます。 2 つのメソッドのシグネチャが一致する必要があります。  
