--- a/docs/visual-basic/misc/bc30455.md
+++ b/docs/visual-basic/misc/bc30455.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611918"
 ---
 # <a name="argument-not-specified-for-parameter-39ltparameternamegt39-of-39ltmethodnamegt39"></a>パラメーターに指定されていない引数&#39; &lt;parametername&gt; &#39;の&#39; &lt;methodname&gt;&#39;
 必要なパラメーターの引数が指定されていません。  
