--- a/docs/visual-basic/misc/bc30562.md
+++ b/docs/visual-basic/misc/bc30562.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611531"
 ---
 # <a name="39ltnamegt39-is-ambiguous-between-declarations-in-modules-39ltmodulename1gt39-and-39ltmodulename2gt39"></a>&#39;&lt;名前&gt;&#39;モジュール内の宣言間であいまいな&#39; &lt;modulename1&gt; &#39;と&#39; &lt;modulename2&gt;&#39;
 あいまいな名前を指定したため、別の名前と競合しています。 Visual Basic コンパイラが、競合解決規則です。名は、自分で明確する必要があります。  
