--- a/docs/visual-basic/misc/bc30581.md
+++ b/docs/visual-basic/misc/bc30581.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33612888"
 ---
 # <a name="39addressof39-expression-cannot-be-converted-to-39lttypenamegt39-because-39lttypenamegt39-is-not-a-delegate-type"></a>&#39;AddressOf&#39;式に変換できない&#39; &lt;typename&gt; &#39;ため&#39; &lt;typename&gt; &#39;デリゲート型ではありません
 ステートメントが `AddressOf` 式をデリゲート型ではない型に変換しようとしました。  
