--- a/docs/visual-basic/misc/bc30619.md
+++ b/docs/visual-basic/misc/bc30619.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613151"
 ---
 # <a name="statement-cannot-appear-within-an-enum-body"></a>ステートメントは、Enum 本体内部には記述できません
 ステートメントは、Enum 本体内部には記述できません。 列挙型の末尾と見なされます。  
