--- a/docs/visual-basic/misc/bc30625.md
+++ b/docs/visual-basic/misc/bc30625.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33616773"
 ---
 # <a name="39module39-statement-must-end-with-a-matching-39end-module39"></a>&#39;モジュール&#39;、対応するステートメントが終了する必要があります&#39;終了モジュール&#39;
 モジュール ブロックは、 `End``Module` ステートメントで終了する必要があります。  
