--- a/docs/visual-basic/misc/bc30667.md
+++ b/docs/visual-basic/misc/bc30667.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613472"
 ---
 # <a name="paramarray-parameters-must-be-declared-39byval39"></a>ParamArray パラメーターを宣言する必要があります&#39;ByVal&#39;
 `ParamArray` パラメーターは `ByRef` 修飾子を使用できません。  
