--- a/docs/visual-basic/misc/bc30678.md
+++ b/docs/visual-basic/misc/bc30678.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33618460"
 ---
 # <a name="39end39-statement-not-valid"></a>&#39;終了&#39;ステートメントは無効です
 `End` キーワードが正しくない方法で使用されているか、または現在のコンテキストで適切ではありません。  
