--- a/docs/visual-basic/misc/bc30710.md
+++ b/docs/visual-basic/misc/bc30710.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33615067"
 ---
 # <a name="end-of-expression-expected"></a>式の終わりが必要です。
 そうでなければ完成している式の末尾に余分な文字が見つかりました。  
