--- a/docs/visual-basic/misc/bc30721.md
+++ b/docs/visual-basic/misc/bc30721.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33614274"
 ---
 # <a name="evaluation-of-expression-or-statement-stopped"></a>式またはステートメントの評価が停止されました
 **[評価の停止]** メニュー項目が選択されたため、評価が停止されました。  
