--- a/docs/visual-basic/misc/bc30752.md
+++ b/docs/visual-basic/misc/bc30752.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33615002"
 ---
 # <a name="39on-error39-statements-are-not-valid-within-39synclock39-statements"></a>&#39;エラー&#39;ステートメントは内で有効ではありません&#39;SyncLock&#39;ステートメント。
 `On Error` ステートメントはスレッドの同期を中断するため、 `SyncLock` ブロック内では使用できません。  
