--- a/docs/visual-basic/misc/bc30760.md
+++ b/docs/visual-basic/misc/bc30760.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613007"
 ---
 # <a name="referenced-object-has-a-value-of-39nothing39"></a>参照先オブジェクトの値を持つ&#39;何も行われません&#39;
 使用しているオブジェクトに値 `Nothing`がありますが、使用可能な値が必要です。 `Nothing` はオブジェクトには値がないことを示す値であり、その理由は、オブジェクトに値が割り当てられなかったか、値 `Nothing`が割り当てられたことです。  
