--- a/docs/visual-basic/misc/bc30782.md
+++ b/docs/visual-basic/misc/bc30782.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33616419"
 ---
 # <a name="39continue-do39-can-only-appear-inside-a-39do39-statement"></a>&#39;Continue Do&#39;内でのみ表示できます、&#39;は&#39;ステートメント
 `Continue Do` ステートメントは、 `Do...Loop` ループ内でのみ使用できます。  
