--- a/docs/visual-basic/misc/bc30793.md
+++ b/docs/visual-basic/misc/bc30793.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33617814"
 ---
 # <a name="39trycast39-operands-must-be-class-constrained-type-parameters-but-39lttypeparameternamegt39-has-no-class-constraint"></a>&#39;TryCast&#39;オペランドは、クラスの制約がある型パラメーターである必要がありますが、 &#39; &lt;typeparametername&gt; &#39;クラスの制約がありません
 [TryCast 演算子](../../visual-basic/language-reference/operators/trycast-operator.md)こと参照型であることが保証されない型パラメーターのオペランドに演算子を使用します。  
