--- a/docs/visual-basic/misc/bc30797.md
+++ b/docs/visual-basic/misc/bc30797.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33617498"
 ---
 # <a name="error-in-project-level-import-39ltqualifiedelementnamegt39-at-39ltqualifiedcontainernamegt39--lterrormessagegt"></a>プロジェクト レベル インポートでエラー &#39; &lt;qualifiedelementname&gt; &#39;で&#39;&lt;が発生しました&gt;&#39; : &lt;errormessage&gt;
 ステートメントが別のアセンブリで定義されたプログラミング要素にアクセスしていますが、そのアセンブリへのプロジェクト参照がありません。  
