--- a/docs/visual-basic/misc/bc30805.md
+++ b/docs/visual-basic/misc/bc30805.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33614960"
 ---
 # <a name="array-declarations-cannot-specify-lower-bounds"></a>配列宣言で下限を指定することはできません
 配列の下限は常に 0 です。 コードを読みやすくするための下限として 0 を指定することができます。 ただし、下限としてその他の値を指定できません。  
