--- a/docs/visual-basic/misc/bc30815.md
+++ b/docs/visual-basic/misc/bc30815.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33615987"
 ---
 # <a name="39ltfunctionnamegt39-is-not-declared-visual-basic-error"></a>&#39;&lt;関数は functionname&gt; &#39; (Visual Basic エラー) が宣言されていません
 '\<functionname >' は宣言されていません。 ファイル出入力 (I/O) 機能は Microsoft.VisualBasic 名前空間で使用できます。  
