--- a/docs/visual-basic/misc/bc30906.md
+++ b/docs/visual-basic/misc/bc30906.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33617869"
 ---
 # <a name="ltprocedurename1gt-cannot-override-ltprocedurename2gt-because-they-differ-by-parameters-declared-39paramarray39"></a>&lt;procedurename1&gt;オーバーライドできません&lt;procedurename2&gt;として宣言されたパラメーターが異なるため&#39;ParamArray&#39;
 派生クラス内のプロシージャは、基底クラスで同じ名前を持つプロシージャをオーバーライドしますが、パラメーター リストが異なります。  
