--- a/docs/visual-basic/misc/bc30924.md
+++ b/docs/visual-basic/misc/bc30924.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33616618"
 ---
 # <a name="39ltnamegt39-cannot-expose-type-39lttype1gt39-used-in-the-underlying-delegate-type-39ltdelegatetypegt39-of-the-event-it-is-implementing-outside-the-project-through-ltspecifiergt-39lttype2gt39"></a>&#39;&lt;名前&gt;&#39;型を公開できません&#39; &lt;type1&gt; &#39;基になるデリゲート型で使用される&#39; &lt;delegatetype&gt; &#39;実装しているイベントの。経由でプロジェクトの外部&lt;指定子&gt; &#39; &lt;type2&gt;&#39;
 このコードは、パブリック クラスの外部でプライベート型を公開しています。  
