--- a/docs/visual-basic/misc/bc30940.md
+++ b/docs/visual-basic/misc/bc30940.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33618187"
 ---
 # <a name="39return39-statement-in-an-39addhandler39-39removehandler39-or-39raiseevent39-method-cannot-return-a-value"></a>&#39;返す&#39;内のステートメント、 &#39;AddHandler&#39;、 &#39;RemoveHandler&#39;、または&#39;RaiseEvent&#39;メソッドは値を返すことはできません
 `AddHandler`宣言内の `RemoveHandler`、 `RaiseEvent` 、 `Custom Event` の各メソッドには、それぞれのメソッドを終了する `Return` ステートメントを含めることができます。 ただし、いずれのメソッドも値を返すことができないため、 `Return` ステートメントでは戻り値を指定できません。  
