--- a/docs/visual-basic/misc/bc31023.md
+++ b/docs/visual-basic/misc/bc31023.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33618910"
 ---
 # <a name="unable-to-parse-xml-lterrorgt"></a>XML を解析できません:&lt;エラー&gt;
 使用中の XML ファイルにエラーがあります。  
