--- a/docs/visual-basic/misc/bc31033.md
+++ b/docs/visual-basic/misc/bc31033.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33619383"
 ---
 # <a name="interface-39ltinterfacenamegt39-can-be-implemented-only-once-by-this-type"></a>インターフェイス&#39; &lt;interfacename&gt; &#39;この型によって 1 回のみ実装できます
 指定したインターフェイスはこの型によって既に実装されており、再実装できません。  
