--- a/docs/visual-basic/misc/bc31044.md
+++ b/docs/visual-basic/misc/bc31044.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33619022"
 ---
 # <a name="events-declared-with-an-39as39-clause-must-have-a-delegate-type"></a>宣言されたイベント、&#39;として&#39;句はデリゲート型である必要があります
 デリゲートではない型が指定されています。  
