--- a/docs/visual-basic/misc/bc42106.md
+++ b/docs/visual-basic/misc/bc42106.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33635747"
 ---
 # <a name="operator-39ltoperatorsymbolgt39-doesn39t-return-a-value-on-all-code-paths"></a>演算子&#39; &lt;operatorsymbol&gt; &#39;しません&#39;t は、すべてのコード パスで値を返しません
 演算子 '\<operatorsymbol >' は、すべてのコード パスで値を返しません。 この結果が使用されると、実行時に Null 参照例外が生じる可能性があります。  
